# python-concepts

./: README.md  config.json  hello.py  hello_world.py  pyproject.toml  pytest.ini  test_calc.py
code/: hello.py  hello_world.py
config/: my_config.ini  my_config.json  my_config.toml  my_config.xlsx  my_config.yaml
src/: calc.py  calc_module.py  example_classes.py  hello.py  hello_world.py  my_exception.py  pytest_examples.py
src/email/: email_reader_imap_tools.py  email_reader_imaplib.py
tests/: conftest.py  test_basics.py  test_calc.py  test_classes.py  test_config_files.py  test_control_flow.py  test_control_structures.py  test_date_time.py  test_exceptions.py  test_functions.py  test_imports.py  test_io.py  test_meta.py  test_modules.py  test_pytest_examples.py  test_pytest_fixtures.py  test_standard_library.py  test_strings.py
tests/data_structures/: test_dictionary.py  test_lists.py  test_sets.py  test_tuples.py
tests/email/: test_email_imap_tools.py  test_email_imaplib.py
