[tool.poetry]
name = "python-concepts"
version = "0.1.0"
description = "Examples of Python concepts"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.1.1"
imap-tools = "^0.57.0"
pyyaml = "^6.0"
openpyxl = "^3.1.1"
python-example-module = {git = "git@github.com:joeg3/python-example-module.git"}
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hello-world = "code.hello:print_version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"